// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao acp --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: miao.local)
                                                                    [string] [default: "miao.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --attach       connect to an existing server URL                                      [string]
      --cwd          working directory [string] [default: "<HOME>"]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao mcp --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao mcp

manage MCP (Model Context Protocol) servers

Commands:
  miao mcp add [name]     add an MCP server
  miao mcp list           list MCP servers and their status                            [aliases: ls]
  miao mcp auth [name]    authenticate with an OAuth-enabled MCP server
  miao mcp logout [name]  remove OAuth credentials for an MCP server
  miao mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao attach --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao attach <url>

attach to a running miao server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help          show help                                                            [boolean]
  -v, --version       show version number                                                  [boolean]
      --print-logs    print logs to stderr                                                 [boolean]
      --log-level     log level                 [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure          run without external plugins                                         [boolean]
      --dir           directory to run in                                                   [string]
  -c, --continue      continue the last session                                            [boolean]
  -s, --session       session id to continue                                                [string]
      --fork          fork the session when continuing (use with --continue or --session)  [boolean]
  -p, --password      basic auth password (defaults to MIAO_SERVER_PASSWORD)                [string]
  -u, --username      basic auth username (defaults to MIAO_SERVER_USERNAME or 'miao')      [string]
      --mini          start the minimal interactive interface             [boolean] [default: false]
      --no-replay     disable mini session history replay on resume and after resize       [boolean]
      --replay-limit  cap visible mini replay to the newest N messages                      [number]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao run --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao run [message..]

run miao with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --command      the command to run, use message for args                               [string]
  -c, --continue     continue the last session                                             [boolean]
  -s, --session      session id to continue                                                 [string]
      --fork         fork the session before continuing (requires --continue or --session) [boolean]
  -m, --model        model to use in the format of provider/model                           [string]
      --agent        agent to use                                                           [string]
      --format       format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file         file(s) to attach to message                                            [array]
      --title        title for the session (uses truncated prompt if no value provided)     [string]
      --attach       attach to a running miao server (e.g., http://localhost:4096)          [string]
  -p, --password     basic auth password (defaults to MIAO_SERVER_PASSWORD)                 [string]
  -u, --username     basic auth username (defaults to MIAO_SERVER_USERNAME or 'miao')       [string]
      --dir          directory to run in, path on remote server if attaching                [string]
      --port         port for the local server (defaults to random port if no value provided)
                                                                                            [number]
      --variant      model variant (provider-specific reasoning effort, e.g., high, max, minimal)
                                                                                            [string]
      --thinking     show thinking blocks                                                  [boolean]
  -i, --interactive  run in direct interactive split-footer mode          [boolean] [default: false]
      --auto         auto-approve permissions that are not explicitly denied (dangerous!)
                                                                          [boolean] [default: false]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao debug --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao debug

debugging and troubleshooting tools

Commands:
  miao debug config    show resolved configuration
  miao debug lsp       LSP debugging utilities
  miao debug rg        ripgrep debugging utilities
  miao debug file      file system debugging utilities
  miao debug scrap     list all known projects
  miao debug skill     list all available skills
  miao debug snapshot  snapshot debugging utilities
  miao debug startup   print startup timing
  miao debug v2        debug v2 catalog and built-in plugins
  miao debug info      show debug information
  miao debug paths     show global paths (data, config, cache, state)
  miao debug wait      wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao providers --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao providers

manage AI providers and credentials

Commands:
  miao providers list               list providers and credentials                     [aliases: ls]
  miao providers login [url]        log in to a provider
  miao providers logout [provider]  log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao agent --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao agent

manage agents

Commands:
  miao agent create  create a new agent
  miao agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao upgrade --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao upgrade [target]

upgrade miao to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao uninstall --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao uninstall

uninstall miao and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao serve --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao serve

starts a headless miao server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: miao.local)
                                                                    [string] [default: "miao.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao runtime --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao runtime [action]

run the persistent local session Runtime

Positionals:
  action                                     [choices: "start", "status", "stop"] [default: "start"]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao web --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao web

start miao server and open web interface

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: miao.local)
                                                                    [string] [default: "miao.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao models --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from the catalog                              [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao stats --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao stats

show token usage and cost statistics

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --days        show stats for the last N days (default: all time)                      [number]
      --tools       number of tools to show (default: all)                                  [number]
      --models      show model statistics (default: hidden). Pass a number to show top N, otherwise
                    shows all
      --project     filter by project (default: all projects, empty string: current project)[string]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao export --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao export [sessionID]

export session data as JSON or JSONL

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]
      --format      output format: json (pretty) or jsonl (one line per message)
                                               [string] [choices: "json", "jsonl"] [default: "json"]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao import --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao import <file>

import session data from a JSON file written by \`miao export\`

Positionals:
  file  path to JSON file                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao pr --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao pr <number>

fetch and checkout a GitHub PR branch, then run miao

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao session --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao session

manage sessions

Commands:
  miao session list                list sessions
  miao session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao plugin --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao db --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao db

database tools

Commands:
  miao db [query]            open an interactive sqlite3 shell or run a query              [default]
  miao db path               print the database path
  miao db stats              report database size and per-table / per-event-type usage
  miao db vacuum             checkpoint, enable incremental auto-vacuum, and VACUUM to reclaim free
                             space
  miao db backfill           convert legacy V1 session messages into the V2 projection (idempotent)
  miao db compact            retire legacy V1 storage once its history is projected (deletes events,
                             drops tables, vacuums)
  miao db restore            merge sessions from another database into this one (to roll back a
                             compaction)
  miao db externalize-blobs  move existing inline attachments and tool files into the
                             content-addressed blob store
  miao db gc-blobs           delete content-addressed blobs that no session row references
  miao db retention          report durable events a bounded event log could prune (report only)

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao doctor --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao doctor

process, storage, and system health

Commands:
  miao doctor         report current process, system, and database health                  [default]
  miao doctor report  replay sampled history and report trends and anomalies

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao mcp list --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao mcp add --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao mcp auth --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  miao mcp auth list  list OAuth-capable MCP servers and their auth status             [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao mcp logout --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao providers list --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao providers login --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao providers login [url]

log in to a provider

Positionals:
  url  provider id/name or an HTTP(S) auth-provider URL                                     [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao providers logout --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao providers logout [provider]

log out from a configured provider

Positionals:
  provider  provider id or name to log out from                                             [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao agent create --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao agent list --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao session list --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao session delete --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao db path --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao db backfill --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao db backfill

convert legacy V1 session messages into the V2 projection (idempotent)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --dry-run     report what would be migrated without writing         [boolean] [default: false]
      --verify      map and check every row a migration would write, without writing
                                                                          [boolean] [default: false]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao db compact --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao db compact

retire legacy V1 storage once its history is projected (deletes events, drops tables, vacuums)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --dry-run     report what would be reclaimed without writing        [boolean] [default: false]
      --yes         required to run: this drops the legacy message and part tables
                                                                          [boolean] [default: false]
"
`;

exports[`miao CLI help-text snapshots every documented command emits stable help text: miao doctor report --help 1`] = `
"  /\\/\\  
 ( o.o ) 
  > ^ <

miao doctor report

replay sampled history and report trends and anomalies

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --since       window, e.g. 30m, 24h, 7d                              [string] [default: "24h"]
      --json        emit machine-readable output                          [boolean] [default: false]
"
`;
